update url in bundle

--- a/poopin.safariextension/Info.plist
+++ b/poopin.safariextension/Info.plist
@@ -51,6 +51,6 @@
 		</dict>
 	</dict>
 	<key>Website</key>
-	<string>http://github.com/kch</string>
+	<string>https://github.com/kch/poopin</string>
 </dict>
 </plist>
