--- a/poopin.safariextension/Info.plist
+++ b/poopin.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Caio Chassot</string>
 	<key>Builder Version</key>
-	<string>8536.26.17</string>
+	<string>10600.7.12</string>
 	<key>CFBundleDisplayName</key>
 	<string>Poopin'</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
@@ -34,6 +34,8 @@
 	</dict>
 	<key>Description</key>
 	<string>Make promoted tweets interesting</string>
+	<key>DeveloperIdentifier</key>
+	<string>XRYSPKFC96</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
